Some tailwind css bs
* Scroll on phone is all jacked up.  Should use a list component.
* Should have placeholder when no stars / no songs matched
* Scrolling on song detail view???

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Bluegrass Lyrics",
-  "name": "Create React App Sample",
+  "name": "Bluegrass Lyrics Offline",
   "icons": [
     {
       "src": "favicon.ico",
