--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "react": "^16.9.0",
+    "react-div-100vh": "^0.3.4",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
