--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Bluegrass Lyrics",
-  "name": "Bluegrass Lyrics Offline",
+  "name": "Bluegrass Lyrics Mobile",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#1a202c",
   "background_color": "#ffffff"
 }
